Fix on mobile devices

--- a/style/main.css
+++ b/style/main.css
@@ -414,66 +414,60 @@ hr {
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
   font-size: 0px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-128 .tile-inner {
       font-size: 25px;
     }
-  }
-*/.tile.tile-256 .tile-inner {
+  }.tile.tile-256 .tile-inner {
   color: #f9f6f2;
   background: url("../Images/256.jpg");
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
   font-size: 0px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-256 .tile-inner {
       font-size: 25px;
     }
-  }
-*/.tile.tile-512 .tile-inner {
+  }.tile.tile-512 .tile-inner {
   color: #f9f6f2;
   background: url("../Images/512.jpg");
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
   font-size: 0px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-512 .tile-inner {
       font-size: 25px;
     }
-  }
-*/.tile.tile-1024 .tile-inner {
+  }.tile.tile-1024 .tile-inner {
   color: #f9f6f2;
   background: url("../Images/1024.jpg");
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
   font-size: 0px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-1024 .tile-inner {
       font-size: 15px;
     }
-  }
-*/.tile.tile-2048 .tile-inner {
+  }.tile.tile-2048 .tile-inner {
   color: #f9f6f2;
   background: url("../Images/2048.jpg");
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
   font-size: 0px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-2048 .tile-inner {
       font-size: 15px;
     }
-  }
-*/.tile.tile-super .tile-inner {
+  }.tile.tile-super .tile-inner {
   color: #f9f6f2;
   background: #3c3a32;
   font-size: 30px;
 }
-/*  @media screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
     .tile.tile-super .tile-inner {
       font-size: 10px;
     }
   }
-*/
 @-webkit-keyframes appear {
   0% {
     opacity: 0;
@@ -601,7 +595,7 @@ hr {
 .game-explanation {
   margin-top: 50px; }
 
-/*@media*/ screen and (max-width: 520px) {
+@media screen and (max-width: 520px) {
   html, body {
     font-size: 15px; }
 
